# potato-emocional

ModeloEmocional/: CMakeCache.txt  CMakeLists.txt  Makefile  ModeloEmocional  ModeloEmocional.cpp  ModeloEmocional.h  RuleBlockActualizado.txt  arduino.lcm  cmake_install.cmake  comunicacion.cpp  comunicacion.h  emocion_usuario.lcm  estado.lcm  recibeEmocion.py
ModeloEmocional/potatolcm/: __init__.py  ard_actuadores.hpp  ard_actuadores.java  ard_orden_cola.hpp  ard_orden_cola.java  ard_orden_mejillas.hpp  ard_orden_mejillas.java  ard_orden_pulso.hpp  ard_orden_pulso.java  ard_sensores.hpp  ard_sensores.java  emocion_usuario.hpp  emocion_usuario.py  estado_gen.hpp
